tests/compile_fail/from/legacy_enum_attribute.stderr
error: legacy syntax, remove `types` and use `i32, &str` instead
 --> tests/compile_fail/from/legacy_enum_attribute.rs:3:11
  |
3 |     #[from(types(i32, "&str"))]
  |           ^^^^^^^^^^^^^^^^^^^^
